# Project-TGJ-2023

./: .gitmodules  CMakeLists.txt  README.md
assets/Scenes/: GameScene.tscene  TitleScene.tscene
assets/Textures/: Turtle.aseprite
include/: InputEventBuffingLayer.h
include/Components/: EnvironmentComponents.h  ExampleComponent.h  GameStateComponents.h  HowitzerComponents.h  KillComponents.h  MiscUIComponents.h  TurtleComponents.h
include/Systems/: EnvironmentSystems.h  ExampleSystem.h  GameStateSystems.h  HowitzerSystems.h  KillSystems.h  TurtleSystems.h  UISystems.h
settings/: editor.ini  runtime.ini
src/: CreateApplication.cpp  InputEventBufferLayer.cpp
